fix: se corrige error de documento api
