# app/Http/Controllers/Api/SizeApiController.php
@@ -17,6 +17,41 @@ class SizeApiController extends Controller
     }
 
     /**
+     * @OA\Get(
+     *      path="/api/auth/size",
+     *      operationId="index",
+     *      tags={"Sizes all"},
+     *      summary="Get list of sizes",
+     *      security={
+     *      {"passport": {}},
+     *      },
+     *      description="Returns list of sizes",
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\MediaType(
+     *           mediaType="application/json",
+     *      )
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      ),
+     * @OA\Response(
+     *      response=400,
+     *      description="Bad Request"
+     *   ),
+     * @OA\Response(
+     *      response=404,
+     *      description="not found"
+     *   ),
+     *  )
+     */
+    /**
      * @return \Illuminate\Http\JsonResponse
      */
     public function index()
